# giga-spatial

./: .env_sample  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
api/: index.html
api/core/: index.html
api/generators/: index.html
api/grid/: index.html
api/handlers/: index.html
api/processing/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  index.md
docs/api/: core.md  generators.md  grid.md  handlers.md  index.md  processing.md
docs/examples/: advanced.md  basic.md  index.md  use-cases.md
docs/examples/downloading/: ghsl.md  osm.md
docs/examples/processing/: tif.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: configuration.md  index.md  infrastructure-normalization.md  population-accessibility.md  school-proximity.md  settlement-characterization.md  zonal-statistics-grids.md
examples/: index.html
examples/advanced/: index.html
examples/basic/: index.html
examples/downloading/ghsl/: index.html
examples/downloading/osm/: index.html
examples/processing/tif/: index.html
examples/use-cases/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
gigaspatial/: __init__.py  config.py
gigaspatial/core/: __init__.py
gigaspatial/core/http/: __init__.py  auth.py  client.py  pagination.py
gigaspatial/core/io/: __init__.py  adls_data_store.py  bigquery_client.py  data_api.py  data_store.py  database.py  delta_sharing_data_store.py  local_data_store.py  readers.py  snowflake_data_store.py  writers.py
gigaspatial/core/schemas/: admin_boundary.py  building_footprint.py  cell.py  cell_tower.py  entity.py  mobile_coverage.py  shared.py  transmission_node.py  wireless_access_service.py  wireless_site.py
gigaspatial/generators/: __init__.py  poi.py
gigaspatial/generators/poi/: base.py  ghsl_built_s.py  ghsl_smod.py  google_open_buildings.py  microsoft_global_buildings.py
gigaspatial/generators/zonal/: __init__.py  admin.py  base.py  geometry.py  h3.py  mercator.py  s2.py
gigaspatial/grid/: __init__.py  h3.py  mercator_tiles.py  s2.py
gigaspatial/handlers/: __init__.py  aqueduct_flood.py  base.py  base_reader.py  boundaries.py  ghsl.py  giga.py  google_ms_combined_buildings.py  google_open_buildings.py  hdx.py  healthsites.py  mapbox_image.py  maxar_image.py  microsoft_global_buildings.py  mlab.py  ookla_speedtest.py  opencellid.py  osm.py  overture.py  rwi.py  unicef_georepo.py  worldpop.py
gigaspatial/handlers/gee/: __init__.py  config.py  profiler.py  registry.py
gigaspatial/processing/: __init__.py  algorithms.py  buildings_engine.py  entity_processor.py  geo.py  sat_images.py  tif_processor.py  utils.py
gigaspatial/utils/: logging.py
license/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_snowflake_datastore.py
tests/handlers/: test_worldpop_config.py
user-guide/: index.html
user-guide/configuration/: index.html
user-guide/infrastructure-normalization/: index.html
user-guide/population-accessibility/: index.html
user-guide/school-proximity/: index.html
user-guide/settlement-characterization/: index.html
user-guide/zonal-statistics-grids/: index.html
(+29 files in other folders)
