[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giga-spatial"
description = "A package for spatial data download & processing"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Utku Can Ozturk", email = "utkucanozturk@gmail.com" }
]
keywords = [
    "gigaspatial", "spatial", "geospatial", "gis", "remote sensing",
    "data processing", "download", "openstreetmap", "osm", "ghsl",
    "grid", "point of interest", "POI", "raster", "vector",
    "school connectivity", "unicef", "giga", "mapping", "analysis", "python"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: OS Independent"
]

# Core dependencies
dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "pycountry==24.6.1",
    "pydantic>=2.10.6",
    "rasterio==1.3.10",
    "requests>=2.32.4",
    "scipy>=1.15.1",
    "shapely>=2.0.7",
    "networkx>=3.2.1",
    "tqdm>=4.65.0",
    "OWSLib>=0.31.0",
    "pydantic-settings>=2.7.1",
    "hdx-python-api>=6.3.8",
    "bs4==0.0.2",
    "s3fs>=2024.12.0",
    "psutil>=6.0.0",
    "httpx>=0.27",
    "pyarrow>=17.0.0",
    "plotly>=5.24.0",
    "mercantile==1.2.1",
    "h3>=4.2.0",
    "s2sphere==0.2.5"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/unicef/giga-spatial"
Documentation = "https://unicef.github.io/giga-spatial/"
Source = "https://github.com/unicef/giga-spatial"
"Issue Tracker" = "https://github.com/unicef/giga-spatial/issues"
Discussions = "https://github.com/unicef/giga-spatial/discussions"
Changelog = "https://unicef.github.io/giga-spatial/changelog"

[project.optional-dependencies]
gee = [
    "earthengine-api>=1.7.0",
    "geemap>=0.36.6"
]
bq = [
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-bigquery-storage>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "db-dtypes>=1.0.0"
]
azure = [
    "azure-storage-blob>=12.22.0"
]
snowflake = [
    "snowflake-connector-python>=3.0.0"
]
delta = [
    "delta-sharing==1.2.0"
]
db = [
    "SQLAlchemy>=2.0.0",
    "sqlalchemy-trino==0.5.0",
    "dask>=2024.12.1"
]
duckdb = [
    "duckdb==1.2.0"
]
unicef = [
    "unicefdata>=2.4.0"
]
elevation = [
    "itur>=0.4.0"
]

# Meta target using PEP 508 self-references to bundle everything seamlessly
all = [
    "giga-spatial[gee]",
    "giga-spatial[bq]",
    "giga-spatial[azure]",
    "giga-spatial[snowflake]",
    "giga-spatial[delta]",
    "giga-spatial[db]",
    "giga-spatial[duckdb]",
    "giga-spatial[unicef]",
    "giga-spatial[elevation]"
]

[tool.setuptools.dynamic]
version = { attr = "gigaspatial.__init__.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["gigaspatial*"]